# 3dmodelling-misc

./: .gitignore
ass1/: CmakeLists.txt  hw1.cpp  makefile
hw1/: CMakeLists.txt  hw1-original.cpp  hw1.cpp
hw2/cpp/: CMakeLists.txt  README.md
hw2/cpp/src/: PolyhedronBuilder.h  extruder.cpp  main.cpp
hw3/cpp/: CMakeLists.txt  README.md
hw3/cpp/src/: bim_obj.cpp  cjson.cpp  io.cpp  main.cpp  types.h  voxel.cpp  voxelgrid.cpp  voxelinfo.cpp
hw3/cpp/src/tests/: test_io.cpp
